Fix a z-index and display issue with the docs switcher

--- a/assetsSource/css/layout/Docs/Docs.0000.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0000.pcss
@@ -4,6 +4,7 @@
 
 .DocsHeader {
     text-align: center;
+    z-index: 10;
 }
 
 .DocsHeadingBackLink {
