--- a/assetsSource/css/layout/Docs/Docs.0900.pcss
+++ b/assetsSource/css/layout/Docs/Docs.0900.pcss
@@ -7,6 +7,10 @@
     width: 280px;
 }
 
+.DocsHeadingNav__List {
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
+}
+
 .DocsAside {
     height: calc(100% - 46px);
     overflow-y: auto;
